--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,17 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
+  build_runner: ^2.4.5
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-
-  cupertino_icons: ^1.0.2
-  http: ^0.13.0
   flutter_map: ^4.0.0
+  flutter_mobx: ^2.0.6+5
   geocoding: ^2.1.0
+  http: ^0.13.0
   latlong2: ^0.8.2
+  mobx: ^2.2.0
+  mobx_codegen: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -25,18 +27,14 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
