--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 
 dependencies:
   build_runner: ^2.4.5
+  cloud_firestore: ^4.8.1
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
   flutter:
     sdk: flutter
   flutter_map: ^4.0.0
