--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   latlong2: ^0.8.2
   # API
   http: ^0.13.0
+  flutter_facebook_auth: ^5.0.11
 
 dev_dependencies:
   flutter_test:
