--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_core: ^2.14.0
   google_sign_in: ^6.1.4
   # UTILITY
+  google_fonts: ^4.0.4
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -49,11 +50,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
