--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   # LOCATION
   geocoding: ^2.1.0
   latlong2: ^0.8.2
+  google_maps_flutter: ^2.3.1
+  geolocator: ^9.0.2
   # API
   http: ^0.13.0
   flutter_facebook_auth: ^5.0.11
@@ -50,11 +52,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: fonts/Poppins-Regular.ttf
-        - asset: fonts/Poppins-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
