--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # LANG
   intl: ^0.18.1
   url_launcher: ^6.1.11
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
