--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.18.1
   url_launcher: ^6.1.11
   flutter_slidable: ^3.0.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
