ticket selling platform added with url_launcher

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -70,5 +70,9 @@
 	<string>Older devices need location.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Can I have location always?<string/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+  	<string>Ticket Selling Web Site</string>
+	</array>
 </dict>
 </plist>
