--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.1.11
   flutter_slidable: ^3.0.0
   geolocator: ^9.0.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
