--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -64,6 +64,12 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Need location when in use</string>
+  	<key>NSPhotoLibraryUsageDescription</key>
+  	<string>To take user profile picture</string>
+  	<key>NSCameraUsageDescription</key>
+  	<string>To choose user profile picture</string>
+  	<key>NSMicrophoneUsageDescription</key>
+  	<string>Used to capture audio for image picker</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Always and when in use</string>
 	<key>NSLocationUsageDescription</key>
