--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   connectivity_plus: ^4.0.1
   provider: ^6.0.5
+  image_picker: ^1.0.0
+  firebase_storage: ^11.2.4
 
 dev_dependencies:
   flutter_test:
