--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^1.0.0
   firebase_storage: ^11.2.4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
