--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_storage: ^11.2.4
   cached_network_image: ^3.2.3
   cloud_firestore: ^4.8.2
+  flutter_local_notifications: ^15.1.0+1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
