--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
