--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
   permission_handler: ^10.4.3
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
